[metadata]
name = yolov4
url = https://github.com/hhk7734/tensorflow-yolov4
project_urls =
    Documentation = https://wiki.loliot.net/docs/lang/python/libraries/yolov4/python-yolov4-about
    Source = https://github.com/hhk7734/tensorflow-yolov4

author = Hyeonki Hong
author_email = hhk7734@gmail.com
description = YOLOv4: Optimal Speed and Accuracy of Object Detection
long-description = file: README.md, CHANGELOG
long_description_content_type = text/markdown
keywords = tensorflow, yolo, AI, TPU
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: System :: Hardware


[options]
packages = find:
package_dir=
    = py_src
zip_safe = False
install_requires =
    numpy>=1.18.0
    tqdm
    PyTurboJPEG==1.5.1

[options.packages.find]
where = py_src